<resources>
    <string name="app_name">Gegan</string>
    <string name="log_reg">Registrarse</string>
    <string name="login">Entrar</string>
    <string name="add_item">Agregar</string>
    <string name="imagen">Imagen</string>
    <string name="pass">Contraseña:</string>
    <string name="user_name">Nombre de Usuario:</string>
    <string name="identy">Cedula:</string>
    <string name="name">Nombre:</string>
    <string name="raza">Raza:</string>
    <string name="tipo">Tipo:</string>
    <string name="peso_nac">Peso al nacer:</string>
    <string name="nacimiento">Fecha de Nacimiento:</string>
    <string name="peso_actual">Peso Actual:</string>
    <string name="valor">Valor:</string>
    <string name="comentario">Comentario:</string>
    <string name="fecha">Fecha:</string>
</resources>
