<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <data>
        <variable
            name="handler"
            type="unicauca.movil.gegan.AddReportesActivity"/>
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.CardView
            android:padding="@dimen/small"
            android:layout_margin="@dimen/small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/small">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tipo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/tipo"
                        android:onClick="selectType"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/valor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:inputType="numberDecimal"
                        android:layout_height="wrap_content"
                        android:hint="@string/valor"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/comentario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/comentario"
                        android:inputType="textImeMultiLine"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/fecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/fecha"
                        android:inputType="date"
                        android:onClick="datePicker"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/small"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/xsmall"
            android:text="@string/add_item"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:id="@+id/button"
            android:onClick="@{()-> handler.save()}"/>

    </LinearLayout>
</layout>
