<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="handler"
            type="unicauca.movil.gegan.RegisterActivity" />

    </data>
    <RelativeLayout
        android:id="@+id/activity_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="unicauca.movil.gegan.RegisterActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/log_background">

            <android.support.v7.widget.CardView
                android:padding="@dimen/small"
                android:layout_marginTop="@dimen/small"
                android:layout_marginRight="@dimen/small"
                android:layout_marginLeft="@dimen/small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/small"
                        android:id="@+id/name">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:hint="@string/name" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/small"
                        android:layout_below="@+id/name"
                        android:id="@+id/identy">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:hint="@string/identy" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/small"
                        android:layout_below="@+id/identy"
                        android:id="@+id/user_name">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:hint="@string/user_name" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/small"
                        android:layout_below="@+id/user_name"
                        android:id="@+id/pass">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:hint="@string/pass" />
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/add_btn"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:text="@string/imagen"
                        android:textSize="@dimen/small"
                        android:layout_centerInParent="true"
                        android:drawableLeft="@drawable/ic_insert_photo_24dp"
                        android:layout_below="@+id/pass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{()-> handler.takePic()}"
                        />


                </RelativeLayout>


            </android.support.v7.widget.CardView>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small"
                android:layout_gravity="center"
                android:text="@string/add_item"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:id="@+id/button" />

        </LinearLayout>


    </RelativeLayout>
</layout>