<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="handler"
            type="unicauca.movil.gegan.AddAnimalActivity"/>
    </data>
    <ScrollView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="unicauca.movil.gegan.AddAnimalActivity">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small"
                app:cardElevation="@dimen/small"
                android:elevation="@dimen/xsmall">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:hint="@string/name"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/raza"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:hint="@string/raza"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/sexo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:onClick="selectSex"
                            android:hint="Sexo:"
                            />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tipo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/tipo"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/nacimiento"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/nacimiento"
                            android:inputType="date"
                            android:onClick="datePicker"
                            />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/peso_nac"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/peso_nac"
                            android:inputType="numberDecimal"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/peso_ac"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/peso_actual"
                            android:inputType="numberDecimal"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/litros"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Litros diarios"
                            android:inputType="numberDecimal"/>
                    </android.support.design.widget.TextInputLayout>
                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="@dimen/ic_add_photo"
                        android:layout_height="@dimen/ic_add_photo"
                        android:src="@drawable/ic_add_a_photo2_24dp"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter"
                        android:layout_marginBottom="@dimen/xsmall"
                        android:onClick="@{()-> handler.picSelect()}"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/xsmall"
                android:text="@string/add_item"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:id="@+id/button"
                android:onClick="@{()-> handler.save()}"/>

        </LinearLayout>

    </ScrollView>
</layout>
