<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="handler"
            type="unicauca.movil.gegan.ReporteDetailActivity"/>
        <variable
            name="reporte"
            type="unicauca.movil.gegan.models.Reporte"/>
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/small">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/tipo_pre"
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:textSize="@dimen/icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tipo"/>
                <TextView
                    android:id="@+id/tipo"
                    android:layout_marginLeft="@dimen/xsmall"
                    android:layout_toRightOf="@id/tipo_pre"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="@dimen/icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="asdasdasd"
                    android:text="@{reporte.tipo}"/>
                <TextView
                    android:id="@+id/valor_pre"
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:textSize="@dimen/icon"
                    android:layout_below="@id/tipo_pre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/valor"/>
                <TextView
                    android:id="@+id/valor"
                    android:layout_marginLeft="@dimen/xsmall"
                    android:layout_toRightOf="@id/valor_pre"
                    android:layout_below="@id/tipo"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="@dimen/icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="asdasdasd"
                    android:text='@{""+reporte.valor}'/>
                <TextView
                    android:id="@+id/comen_pre"
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:textSize="@dimen/icon"
                    android:layout_below="@id/valor_pre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comentario"/>
                <TextView
                    android:id="@+id/comen"
                    android:layout_marginLeft="@dimen/xsmall"
                    android:layout_toRightOf="@id/comen_pre"
                    android:layout_below="@id/valor"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="@dimen/icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="asdasdasd"
                    android:text='@{reporte.comentario}'/>
                <TextView
                    android:id="@+id/fecha_pre"
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:textSize="@dimen/icon"
                    android:layout_below="@id/comen_pre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fecha"/>
                <TextView
                    android:id="@+id/fecha"
                    android:layout_marginLeft="@dimen/xsmall"
                    android:layout_toRightOf="@id/fecha_pre"
                    android:layout_below="@id/comen"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="@dimen/icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="asdasdasd"
                    android:text='@{""+reporte.fecha}'/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</layout>
