<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="handler"
            type="unicauca.movil.gegan.LoginActivity" />

    </data>

    <LinearLayout
        android:id="@+id/activity_login"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/log_background"
        android:paddingTop="@dimen/small"
        tools:context="unicauca.movil.gegan.LoginActivity"
        >

        <ImageView
            android:paddingTop="@dimen/small"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/log_img"
            android:src="@drawable/bull2"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/log_title"
            android:gravity="center"
            android:textColor="@color/gegan"/>

        <android.support.v7.widget.CardView
            android:id="@+id/card"
            android:layout_margin="@dimen/marg_log_card"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:background="@color/black">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/small"
                    android:layout_alignParentTop="true"
                    android:id="@+id/id_usr">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="Nombre de Usuario:"

                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/small"
                    android:layout_below="@+id/id_usr"
                    android:id="@+id/pass">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="Contraseña:" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/reg_btn"
                    android:paddingLeft="@dimen/small"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:text="@string/log_reg"
                    android:layout_alignParentBottom="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()-> handler.goToReg()}"/>
                <Button
                    android:id="@+id/reg_btn2"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:text="@string/login"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_width="@dimen/log_btn"
                    android:layout_height="wrap_content"
                    />

            </RelativeLayout>

        </android.support.v7.widget.CardView>



    </LinearLayout>
</layout>
